# opt

./: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  panda.config.ts
src/: App.tsx  optimize.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  optimization.rs
src-tauri/src/optimization/features/: jpeg.rs  png.rs  webp.rs
src/components/: Button.tsx  Layout.tsx  OptionEditor.tsx  Progress.tsx  ResultTable.tsx  Selector.tsx  Table.tsx  TargetImageTable.tsx
