[package]
name = "opt"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-message", "path-all",
  "dialog-open",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"
mozjpeg = "0.9.6"
image = "0.24.7"
oxipng = { git = "https://github.com/shssoichiro/oxipng", branch = "master", features = [
  "parallel",
  "zopfli",
  "filetime",
], default-features = false }
rayon = "1.7.0"
webp = "0.2.5"
imagequant = "4.2.0"
lodepng = "3.7.2"
anyhow = "1.0.73"
thiserror = "1.0.45"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
